# peillute

./: .gitignore  .gitlab-ci.yml  .source_hash  Cargo.toml  Dioxus.toml  LICENSE  README.md  TODO.md  launch_peillute_instance.sh  peillute 2.db  peillute.code-workspace
assets/styling/: main.css
src/: cli.rs  clock.rs  control.rs  db.rs  main.rs  message.rs  network.rs  snapshot.rs  state.rs  utils.rs
src/views/: actions.rs  home.rs  info.rs  mod.rs  navbar.rs  user.rs
tests/: integration_test.rs
