[package]
name = "peillute"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
bincode = "2.0.1"
clap = { version = "4.5.35", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
colored = "2"
rusqlite = "0.34.0"
