[package]
name = "peillute"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.35", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
rusqlite = "0.34.0"
lazy_static = "1.5.0"
rmp-serde = "1.3.0"
