[package]
name = "peillute"
version = "0.1.0"
authors = [
    "Aubin Vert",
    "Théo Guegan",
    "Alexandre Eberhardt",
    "Léopold Chappuis",
]
edition = "2024"

[dependencies]
dioxus = { version = "0.6.1", features = ["router", "fullstack"] }
dioxus-cli-config = { version = "0.6.1", optional = true }
tokio = { version = "1.44.1", features = ["full"], optional = true }
rusqlite = { version = "0.34.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.35", features = ["derive"] }
axum = { version = "0.7.0", optional = true }
log = "0.4.27"
env_logger = "0.11.8"
lazy_static = "1.5.0"
rmp-serde = "1.3.0"
serde_json = "1.0.140"
chrono = "0.4.41"
pnet = "0.35.0"

[features]
default = ["server"]
server = [
    "dioxus/server",
    "dep:axum",
    "dep:tokio",
    "dep:rusqlite",
    "dioxus-cli-config",
]
web = ["dioxus/web"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
